<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="textViewInput">Enter Something</string>
    <string name="textView">Display what the user enters</string>
    <string name="btnDisplay">Display</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>